# summation

./: CMakeLists.txt  README.md  summation-config.cmake.in
cmake/: summation_deps.cmake
summation/: CMakeLists.txt  capi.cpp  capi.h.in  config.hpp.in  summation.hpp
summation/details/: Accumulator.hpp  ExplicitCoercion.hpp  ImplicitCoercion.hpp  Kahan.hpp  Klein.hpp  Naive.hpp  Neumaier.hpp  NoEnhancement.hpp  Sum.hpp  SumArgs.hpp  SumRange.hpp  Template.hpp  Tran2SumRange.hpp  TranSumArgs.hpp  TranSumRange.hpp  accumulators.hpp  base_types.hpp  import.hpp  types.hpp
summation_testing/: CMakeLists.txt  capi_test.cpp  kahan_test.cpp  klein_test.cpp  naive_test.cpp  neumaier_test.cpp  sum_test.cpp
